lexion_lang/tests/snapshots/x86_smoke__x86_reports_unsupported_function_values.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86_error(\"backend/x86_unsupported_function_value.lex\").join(\"\\n\")"
snapshot_kind: text
---
  x x86 backend does not support function values yet: fn (i32) -> i32
   ,-[tests/fixtures/backend/x86_unsupported_function_value.lex:6:9]
 5 | fn main() -> i32 {
 6 |     let handler = add_one;
   :         ^^^|^^^
   :            `-- here
 7 |     return handler(1);
   `----

  x x86 backend does not support indirect calls through function values yet: handler
   ,-[tests/fixtures/backend/x86_unsupported_function_value.lex:7:12]
 6 |     let handler = add_one;
 7 |     return handler(1);
   :            ^^^^^|^^^^
   :                 `-- here
 8 | }
   `----
