lexion_lang/tests/snapshots/x86_smoke__x86_reports_unsupported_reference_creation.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86_error(\"backend/x86_unsupported_reference.lex\").join(\"\\n\")"
snapshot_kind: text
---
  x x86 backend does not support reference creation yet
   ,-[tests/fixtures/backend/x86_unsupported_reference.lex:3:21]
 2 |     let value = 1;
 3 |     let reference = &value;
   :                     ^^^|^^
   :                        `-- here
 4 |     return value;
   `----

  x x86 backend does not support reference values yet: &i32
   ,-[tests/fixtures/backend/x86_unsupported_reference.lex:3:9]
 2 |     let value = 1;
 3 |     let reference = &value;
   :         ^^^^|^^^^
   :             `-- here
 4 |     return value;
   `----
