lexion_lang/tests/snapshots/x86_smoke__x86_reports_unsupported_reference_dereference.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86_error(\"backend/x86_unsupported_dereference.lex\").join(\"\\n\")"
snapshot_kind: text
---
  x x86 backend does not support reference creation yet
   ,-[tests/fixtures/backend/x86_unsupported_dereference.lex:3:21]
 2 |     let value = 1;
 3 |     let reference = &value;
   :                     ^^^|^^
   :                        `-- here
 4 |     *reference = 2;
   `----

  x x86 backend does not support reference values yet: &i32
   ,-[tests/fixtures/backend/x86_unsupported_dereference.lex:3:9]
 2 |     let value = 1;
 3 |     let reference = &value;
   :         ^^^^|^^^^
   :             `-- here
 4 |     *reference = 2;
   `----

  x x86 backend does not support stores through dereference expressions yet
   ,-[tests/fixtures/backend/x86_unsupported_dereference.lex:4:5]
 3 |     let reference = &value;
 4 |     *reference = 2;
   :     ^^^^^^^|^^^^^^
   :            `-- here
 5 |     return *reference;
   `----

  x x86 backend does not support dereference expressions yet
   ,-[tests/fixtures/backend/x86_unsupported_dereference.lex:5:12]
 4 |     *reference = 2;
 5 |     return *reference;
   :            ^^^^^|^^^^
   :                 `-- here
 6 | }
   `----
