lexion_lang/tests/snapshots/x86_smoke__x86_reports_unsupported_shadowed_function_pointer_calls.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86_error(\"backend/x86_unsupported_shadowed_function_pointer.lex\").join(\"\\n\")"
---
  ! shadowed function 'callback'
    ,-[tests/fixtures/backend/x86_unsupported_shadowed_function_pointer.lex:10:9]
  9 | fn main() -> i32 {
 10 |     let callback = add_one;
    :         ^^^^|^^^
    :             `-- here
 11 |     return callback(1);
    `----

  x x86 backend does not support function values yet: fn (i32) -> i32
    ,-[tests/fixtures/backend/x86_unsupported_shadowed_function_pointer.lex:10:9]
  9 | fn main() -> i32 {
 10 |     let callback = add_one;
    :         ^^^^|^^^
    :             `-- here
 11 |     return callback(1);
    `----

  x x86 backend does not support indirect calls through function values yet: callback
    ,-[tests/fixtures/backend/x86_unsupported_shadowed_function_pointer.lex:11:12]
 10 |     let callback = add_one;
 11 |     return callback(1);
    :            ^^^^^|^^^^^
    :                 `-- here
 12 | }
    `----
